--- a/eaunon/Objetos5.html
+++ b/eaunon/Objetos5.html
@@ -14,7 +14,17 @@
     </header>
     <div id="extra">
             <div id="content">
-                    <script src="js/objetos.js"></script>
+                <script>
+                    function DNI20sec() {
+                        var interV =setInterval(pideDni, 20000);
+                        function pideDni() {
+                            var dni=prompt("Introduce un DNI");
+                            if(dni=="-1"){
+                                clearInterval(interV);
+                            } 
+                        }
+                    }
+                </script>
             </div>
     </div>
 
