--- a/eaunon/Prueba_JQuery.html
+++ b/eaunon/Prueba_JQuery.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="utf-8" />
     <title>DAW</title>    
-    <link rel="stylesheet"  href="css/plantilla.css" />
+    <link rel="stylesheet"  href="css/JQuery_Prueba.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <header>
         <h2>Formulario JQuery</h2>
     </header>
-    <div id="extra">
-            <div id="content">
-                <form id="id_form">
-                    Nombre:<br>
-                    <input type="text" name="nombre" value="" id="id_name">
-                    <br>
-                    Apellido:<br>
-                    <input type="text" name="apellido" value="" id="id_lastname">
-                    <br><br>
-                    <input type="submit" value="Enviar" id="id_button">
-                </form>
-            </div>
-    </div>
-
-    
+        <div id="content">
+                <table>
+                        <tr>
+                            <td><input type="image" src="images/image1.jpg" value="1"  id="but1"></td>
+                            <td><input type="image" src="images/image2.jpg" value="1"  id="but2"></td>
+                        </tr>
+                        <tr>
+                            <td><input type="image" src="images/image3.gif" value="1"  id="but3"></td>
+                            <td><input type="image" src="images/image4.gif" value="1"  id="but4"></td>
+                        </tr>
+                    </table>
+        </div>
+        <div id="pop_up">
+            POP-UP<input type="submit" value="x" id="close">
+        </div>
     <div id="ad">
         publicidad<br>publicidad<br>publicidad<br>publicidad<br>publicidad<br>publicidad<br>publicidad<br>publicidad<br>
     </div>
