--- a/eaunon/Prueba_JQuery.html
+++ b/eaunon/Prueba_JQuery.html
@@ -65,10 +65,19 @@
         <br>
         <table id="tableTar">
             <tr>
-                <td>“We're all puppets, Laurie. I'm just a puppet who can see the strings.” </td>
-                <td>“Once you realize what a joke everything is, being the Comedian is the only thing that makes
-                    sense.” </td>
-                <td>“None of you understand. I'm not locked up in here with YOU. You're locked up in here with ME.”</td>
+                <td colspan="2" id="text1">“We're all puppets, Laurie. I'm just a puppet who can see the strings.” </td>
+                <td colspan="2" id="text2">“Once you realize what a joke everything is, being the Comedian is the only
+                    thing that makes sense.” </td>
+                <td colspan="2" id="text3">“None of you understand. I'm not locked up in here with YOU. You're locked
+                    up in here with ME.”</td>
+            </tr>
+            <tr>
+                <th><input type="button" id="butAmp1" value="Aumentar" class="butText"></th>
+                <th><input type="button" id="butRed1" value="Disminuir" class="butText"></th>
+                <th><input type="button" id="butAmp2" value="Aumentar" class="butText"></th>
+                <th><input type="button" id="butRed2" value="Disminuir" class="butText"></th>
+                <th><input type="button" id="butAmp3" value="Aumentar" class="butText"></th>
+                <th><input type="button" id="butRed3" value="Disminuir" class="butText"></th>
             </tr>
         </table>
     </div>
