--- a/eaunon/attr.html
+++ b/eaunon/attr.html
@@ -14,30 +14,30 @@
     </header>
     <div id="content">
         <div id="fleximg">
-            <img src="images/mega/bn/megbn1_1.gif" id="meg1_1" class="meg1">
-            <img src="images/mega/bn/megbn1_2.gif" id="meg1_2" class="meg1">
-            <img src="images/mega/bn/megbn1_3.gif" id="meg1_3" class="meg1">
-            <img src="images/mega/bn/megbn1_4.gif" id="meg1_4" class="meg1">
-            <img src="images/mega/bn/megbn1_5.gif" id="meg1_5" class="meg1">
-            <img src="images/mega/bn/megbn1_6.gif" id="meg1_6" class="meg1">
-            <img src="images/mega/bn/megbn1_7.gif" id="meg1_7" class="meg1">
-            <img src="images/mega/bn/megbn2_1.gif" id="meg2_1" class="meg2">
-            <img src="images/mega/bn/megbn2_2.gif" id="meg2_2" class="meg2">
-            <img src="images/mega/bn/megbn2_3.gif" id="meg2_3" class="meg2">
-            <img src="images/mega/bn/megbn2_4.gif" id="meg2_4" class="meg2">
-            <img src="images/mega/bn/megbn2_5.gif" id="meg2_5" class="meg2">
-            <img src="images/mega/bn/megbn2_6.gif" id="meg2_6" class="meg2">
-            <img src="images/mega/bn/megbn2_7.gif" id="meg2_7" class="meg2">
-            <img src="images/mega/bn/megbn2_8.gif" id="meg2_8" class="meg2">
-            <img src="images/mega/bn/megbn3_1.gif" id="meg3_1" class="meg3">
-            <img src="images/mega/bn/megbn3_2.gif" id="meg3_2" class="meg3">
-            <img src="images/mega/bn/megbn3_3.gif" id="meg3_3" class="meg3">
-            <img src="images/mega/bn/megbn3_4.gif" id="meg3_4" class="meg3">
-            <img src="images/mega/bn/megbn3_5.gif" id="meg3_5" class="meg3">
-            <img src="images/mega/bn/megbn3_6.gif" id="meg3_6" class="meg3">
-            <img src="images/mega/bn/megbn3_7.gif" id="meg3_7" class="meg3">
-            <img src="images/mega/bn/megbn3_8.gif" id="meg3_8" class="meg3">
-            <img src="images/mega/bn/megbn3_9.gif" id="meg3_9" class="meg3">
+            <img src="images/mega/bn/megbn1_1.svg" id="meg1_1" class="meg1">
+            <img src="images/mega/bn/megbn1_2.svg" id="meg1_2" class="meg1">
+            <img src="images/mega/bn/megbn1_3.svg" id="meg1_3" class="meg1">
+            <img src="images/mega/bn/megbn1_4.svg" id="meg1_4" class="meg1">
+            <img src="images/mega/bn/megbn1_5.svg" id="meg1_5" class="meg1">
+            <img src="images/mega/bn/megbn1_6.svg" id="meg1_6" class="meg1">
+            <img src="images/mega/bn/megbn1_7.svg" id="meg1_7" class="meg1">
+            <img src="images/mega/bn/megbn2_1.svg" id="meg2_1" class="meg2">
+            <img src="images/mega/bn/megbn2_2.svg" id="meg2_2" class="meg2">
+            <img src="images/mega/bn/megbn2_3.svg" id="meg2_3" class="meg2">
+            <img src="images/mega/bn/megbn2_4.svg" id="meg2_4" class="meg2">
+            <img src="images/mega/bn/megbn2_5.svg" id="meg2_5" class="meg2">
+            <img src="images/mega/bn/megbn2_6.svg" id="meg2_6" class="meg2">
+            <img src="images/mega/bn/megbn2_7.svg" id="meg2_7" class="meg2">
+            <img src="images/mega/bn/megbn2_8.svg" id="meg2_8" class="meg2">
+            <img src="images/mega/bn/megbn3_1.svg" id="meg3_1" class="meg3">
+            <img src="images/mega/bn/megbn3_2.svg" id="meg3_2" class="meg3">
+            <img src="images/mega/bn/megbn3_3.svg" id="meg3_3" class="meg3">
+            <img src="images/mega/bn/megbn3_4.svg" id="meg3_4" class="meg3">
+            <img src="images/mega/bn/megbn3_5.svg" id="meg3_5" class="meg3">
+            <img src="images/mega/bn/megbn3_6.svg" id="meg3_6" class="meg3">
+            <img src="images/mega/bn/megbn3_7.svg" id="meg3_7" class="meg3">
+            <img src="images/mega/bn/megbn3_8.svg" id="meg3_8" class="meg3">
+            <img src="images/mega/bn/megbn3_9.svg" id="meg3_9" class="meg3">
         </div>
         <input type="button" value="Megaman" id="but1">
         <input type="button" value="Megaman 2" id="but2">
